# lab13-llm

./: .env.example  README.md  ex1_quantization.py  ex2_csv_parquet_tools.py  ex3_mcp_client.py  ex3_mcp_datetime_server.py  ex4_mcp_plot_client.py  ex4_mcp_plot_server.py  ex5_guardrails_fishing.py  pyproject.toml
.github/workflows/: lab13.yml
.guardrails/: hub_registry.json
