[project]
name = "lab13-llm-systems"
version = "0.1.0"
description = "Laboratory 13 - LLM inference, tool usage, MCP, guardrails"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "polars>=1.0.0",
    "matplotlib>=3.8.0",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "guardrails-ai>=0.5.0",
]
